Prevent any scrolling (most needed on mobile, to prevent accidental drag being interpreted as a scroll motion, but this change applies on desktop as well)

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-html, body {
-  min-height: 100%;
-}
-
 body {
   background: linear-gradient(to bottom, #555, #333);
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
